prevent rounding bug causing last expanded button in group to wrap

--- a/scss/components/_button-group.scss
+++ b/scss/components/_button-group.scss
@@ -80,12 +80,11 @@ $buttongroup-expand-max: 6 !default;
         &:first-child:nth-last-child(#{$i}) {
           &, &:first-child:nth-last-child(#{$i}) ~ #{$selector} {
             display: inline-block;
-            @if #{$buttongroup-spacing} == '0' {
-              width: #{percentage(1 / $i)};
-            } @else {
-              width: calc(#{percentage(1 / $i)} - #{$buttongroup-spacing});
-            }
+            width: calc(#{percentage(1 / $i)} - #{$buttongroup-spacing});
             margin-#{$global-right}: $buttongroup-spacing;
+            &:last-child {
+              margin-#{$global-right}: $buttongroup-spacing * -$buttongroup-expand-max;
+            }
           }
         }
       }
